[package]
name = "tree-sitter-fixed-form-fortran"
description = "fixed-form-fortran grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "fixed-form-fortran"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/brandon-arrendondo/tree-sitter-fixed-form-fortran"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
